Fixed the horizontal scrollbar appearing in the mobile dropdown menu of the nav bar.

--- a/style.css
+++ b/style.css
@@ -52,3 +52,7 @@ body {
     float: left;
     margin-right: 1em;
 }
+.navbar-nav{
+	margin: 0;
+	padding: 7.5px 15px;
+}
